testsuite/tests/parser/should_fail/NoPatternSynonyms.hs
module NoPatternSynonyms where

pattern P :: G Int
