testsuite/tests/parser/should_fail/NoPatternSynonyms.stderr

NoPatternSynonyms.hs:3:1: error:
    Invalid type signature: pattern P :: ...
    Suggested fix: Perhaps you intended to use PatternSynonyms
